@@ -138,6 +138,7 @@ popd
 - [BGBUILD-322] Allow selection of kernel and ramdisk for ec2 and ebs plugins
 - [BGBUILD-302] Add support for VirtualPC platform
 - [BGBUILD-195] Add support for OpenStack
+- [BGBUILD-304] Standarize plugin callbacks
 
 * Fri Oct 14 2011 Marc Savy <msavy@redhat.com> - 0.9.8-1
 - Upstream release: 0.9.8
