@@ -27,6 +27,7 @@ module BoxGrinder
       @config = mock('Config')
       @config.stub!(:version).and_return('0.1.2')
       @config.stub!(:platform_config).and_return({})
+      @config.stub!(:[]).with(:plugins).and_return({'vmware' => plugin_config})
 
       @appliance_config = mock('ApplianceConfig')
 
@@ -52,15 +53,10 @@ module BoxGrinder
                           })
       )
 
-      options[:log] = Logger.new('/dev/null')
-      options[:previous_plugin] = OpenCascade.new(:deliverables => {:disk => 'a/base/image/path.raw'})
-      @plugin = VMwarePlugin.new
-
-      @plugin.instance_variable_set(:@plugin_config, plugin_config)
-      @plugin.should_receive(:read_plugin_config)
-      @plugin.should_receive(:validate_plugin_config)
-      @plugin.init(@config, @appliance_config, {:class => BoxGrinder::VMwarePlugin, :type => :platform, :name => :vmware, :full_name => "VMware"}, options)
-#      @plugin.validate
+      @plugin = RSpecPluginHelper.new(VMwarePlugin).prepare(@config, @appliance_config,
+        :previous_plugin => OpenCascade.new(:deliverables => {:disk => 'a/base/image/path.raw'}),
+        :plugin_info =>  {:class => BoxGrinder::VMwarePlugin, :type => :platform, :name => :vmware, :full_name => "VMware"}
+      )
 
       @exec_helper = @plugin.instance_variable_get(:@exec_helper)
       @image_helper = @plugin.instance_variable_get(:@image_helper)
